<?xml version="1.0"?>
<package format="3">
  <name>livox_ros_driver2</name>
  <version>0.0.1</version>
  <description>Livox CustomMsg/CustomPoint interfaces for RESPLE</description>
  <maintainer email="pau.reverte@eurecat.org">Pau Reverté</maintainer>
  <license>GPLv3</license>

  <depend>std_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
